@startuml
skinparam classAttributeIconSize 0


class NotificaEstafetaUI{
}

class NotificaEstafetaController{
    checkWellDockedScooter()
    calcEstimativa(scoot,estac)
}

class AplicacaoPOT{
    getInstance()
    getSessaoAtual()
}

class SessaoUtilizador{
    getEmail()
}

class EstafetaDB{
    getEstafetaByEmail(email)
}

class EntregaDB{
    getActiveEntrega(est)
}

class Entrega{
    -idEntrega
    -dataInicio
    -dataFim
    +getScooter()
}

class EstacionamentoScooterDB{
    getActiveParking(scoot)
}

class Scooter{
    -idScooter
    -percentagemBateria
    -pesoMaximo
    -potencia
}

class Estafeta{
  -NIF
  -nome
  -email
  -numeroSegurancaSocial
  -password
}

class EstacionamentoScooter{

}

NotificaEstafetaUI ..> NotificaEstafetaController
NotificaEstafetaController ..> AplicacaoPOT
NotificaEstafetaController ..> EstafetaDB
NotificaEstafetaController ..> EntregaDB
NotificaEstafetaController ..> EstacionamentoScooterDB
AplicacaoPOT ..> SessaoUtilizador
EstafetaDB ..> Estafeta
EntregaDB ..> Entrega
EstacionamentoScooterDB ..> EstacionamentoScooter
Scooter - Entrega: realiza >
Estafeta - Entrega: realiza >
EstacionamentoScooter - Scooter


@enduml